# codeblocks_sfmirror

./: configure.ac
src/: CMakeLists.txt  CodeBlocks_wxGTK32-msys2.cbp  CodeBlocks_wxMSW32-msys2.cbp  update.bat  update32_GTK3.bat  update32_MSW.bat  updatemsys2.sh
src/base/tinyxml/: CMakeLists.txt
src/build_tools/autorevision/: Makefile.am
src/cmake/Modules/: UtilsHelper.cmake
src/include/: cbexception.h  cbplugin.h  configmanager.h  manager.h  settings.h
src/include/scripting/include/: squirrel.h
src/plugins/compilergcc/depslib/src/: Makefile.am  filent.c  fileunix.c
src/plugins/contrib/clangd_client/src/: Version.h
src/plugins/contrib/clangd_client/src/LSPclient/: client.cpp
src/plugins/contrib/clangd_client/src/unixprocess/asyncprocess/: UnixProcess.cpp
src/plugins/contrib/clangd_client/src/winprocess/asyncprocess/: processreaderthread.cpp
src/plugins/contrib/codesnippets/: codesnippets.cpp  codesnippets_wx32_64.cbp  codesnippetstreectrl.cpp  codesnippetstreectrl.h  codesnippetswindow.cpp  codesnippetswindow.h  menuidentifiers.h  snippetitemdata.h  snippetproperty.cpp  snippetsconfig.cpp  snippetsconfig.h  update32_64.bat  update33  version.h
src/plugins/contrib/help_plugin/: Makefile.am
src/plugins/contrib/wxContribItems/: Makefile.am
src/plugins/contrib/wxContribItems/KWIC/: Makefile.am
src/plugins/contrib/wxContribItems/wxFlatNotebook/: Makefile.am
src/plugins/contrib/wxContribItems/wxImagePanel/: Makefile.am
src/plugins/contrib/wxContribItems/wxSpeedButton/: Makefile.am
src/plugins/contrib/wxContribItems/wxchart/: Makefile.am
src/plugins/contrib/wxContribItems/wxled/: Makefile.am
src/plugins/contrib/wxContribItems/wxmathplot/: Makefile.am
src/plugins/contrib/wxContribItems/wxthings/: Makefile.am
src/plugins/contrib/wxSmith/: Makefile.am  wxSmith_wx32-msys2.cbp
src/plugins/contrib/wxSmith/plugin/: Makefile.am
src/plugins/contrib/wxSmith/properties/: Makefile.am
src/plugins/contrib/wxSmith/wxwidgets/: Makefile.am
src/plugins/contrib/wxSmith/wxwidgets/defitems/: Makefile.am
src/plugins/contrib/wxSmith/wxwidgets/properties/: Makefile.am  wxsarraystringcheckproperty.cpp
src/plugins/contrib/wxSmithContribItems/: Makefile.am
src/plugins/debuggergdb/: debuggerdriver.h
src/plugins/scriptedwizard/: wizpage.cpp
src/plugins/scriptedwizard/resources/sdl2/: wizard.script
src/plugins/xpmanifest/: windowsxplooknfeel.h
src/sdk/: Makefile.am  cbplugin.cpp  configmanager.cpp  globals.cpp  pluginmanager.cpp  projectfileoptionsdlg.cpp
src/sdk/scripting/bindings/: Makefile.am
src/sdk/scripting/sqstdlib/: Makefile.am
src/sdk/scripting/squirrel/: Makefile.am
src/sdk/wxscintilla/: Makefile.am
src/src/: Makefile.am  app.cpp  appglobals.cpp  associations.cpp  associations.h  compilersettingsdlg.cpp  crashhandler.h  main.cpp
src/tools/: Makefile.am
src/tools/ConsoleRunner/: Makefile.am  main.cpp
src/tools/cbp2make/: cbp2make.makefile  cbp2make_makefile.cbp  cbp2make_msys2.cbp  usage.txt
